@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-31-2009 patrick     The gadget::InputArea creating a gadget::Event is now
+                        associated with the created gadget::Event object.
+                        NEW VERSION: 1.3.23
 Apr-19-2009 patrick     Added handling of mouse scroll events in the X and Y
                         axes as first class mouse events. For the old behavior
                         of treating them as button presses, recognizing left
